another possible video on mobile sizing fix

--- a/assets/less/jomi/single.less
+++ b/assets/less/jomi/single.less
@@ -166,7 +166,10 @@
 
 @media (max-width: 768px) {
 	.single .video-area{
-		width:100%;
+		margin: 0;
+		.video-holder{
+			width:100%;
+		}
 	}
 }
 
